--- a/account/signIn.html
+++ b/account/signIn.html
@@ -24,7 +24,7 @@
         <!-- phần khác -->
         <div class="others">
             <li><input type="Text" placeholder=" Tìm kiếm..."> <i class="fa-solid fa-magnifying-glass"></i></li>
-            <li> <a href="signIn.html" class="fa-solid fa-user" title="Đăng nhập"></a></li>
+            <li> <a href="#" class="fa-solid fa-user" title="Đăng nhập"></a></li>
             <li> <a href="../details/cart.html" class="fa-solid fa-cart-shopping" title="Giỏ hàng"></a></li>
         </div>
     </header>
@@ -38,8 +38,7 @@
                     <input type="password" id="password" name="password" placeholder="Mật khẩu" required>
                     <i class="fa-solid fa-eye" title="Hiện/Ẩn mật khẩu" id="togglePassword" style="cursor: pointer;"></i>
                 </div>
-
-                
+   
                 <button type="submit">Đăng nhập</button>
                 <div class="forgot">
                     <a href="forgotpassword.html">Quên mật khẩu?</a> | <a href="signUp.html">Đăng ký</a>
