--- a/details/Products.html
+++ b/details/Products.html
@@ -21,7 +21,7 @@
 
         <div class="others">
             <li><input id="searchInput" type="Text" placeholder=" Tìm kiếm..."> <i class="fa-solid fa-magnifying-glass"></i></li>
-            <li> <a href="signIn.html" class="fa-solid fa-user" id="userIcon"></a></li>
+            <li> <a href="../account/signIn.html" class="fa-solid fa-user" id="userIcon"></a></li>
             <li> 
                 <a href="cart.html" class="fa-solid fa-cart-shopping"></a>
                 <span class="cart-counter"></span>
