--- a/details/item-2.html
+++ b/details/item-2.html
@@ -24,7 +24,7 @@
         <!-- phần khác -->
         <div class="others">
             <li><input type="Text" placeholder=" Tìm kiếm..."> <i class="fa-solid fa-magnifying-glass"></i></li>
-            <li> <a href="../signIn.html" class="fa-solid fa-user" id="userIcon"></a></li>
+            <li> <a href="../account/signIn.html" class="fa-solid fa-user" id="userIcon"></a></li>
             <li> <a href="cart.html" class="fa-solid fa-cart-shopping"></a></li>
         </div>  
     </header>
